# TPWorms

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  client_main.cpp  install_script.sh  main.cpp  map_routes.h  server_main.cpp
_posts/: 2023-12-17-welcome-to-jekyll.markdown
client_src/: Animation.cpp  Animation.h  AnimationAngle.cpp  AnimationAngle.h  AnimationScroll.cpp  AnimationScroll.h  CMakeLists.txt  Player.cpp  Player.h  action.h  action_aim.h  action_change_weapon.h  action_cheat.h  action_mov.h  action_shooting.h  actions.h  background.cpp  background.h  beam.cpp  beam.h  camera.cpp  camera.h  class_client.cpp  class_client.h  client.cpp  client.h  client_client.cpp  client_client.h  client_client_receiver.cpp  client_client_receiver.h  client_client_sender.cpp  client_client_sender.h  client_constants.h  client_parser_client.cpp  client_parser_client.h  client_protocol_client.cpp  client_protocol_client.h  colordependentwidgets.cpp  colordependentwidgets.h  constantes_cliente.h  (+38 more)
client_src/QT/: CMakeLists.txt  lobby_constants.h  lobby_renderer.cpp  lobby_renderer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
client_src/QT/assets/: resources.qrc
common_src/: CMakeLists.txt  clock.h  command.h  common_custom_errors.h  common_liberror.cpp  common_liberror.h  common_monitor_match.cpp  common_monitor_match.h  common_monitor_matches.cpp  common_monitor_matches.h  common_parser.cpp  common_parser.h  common_protocol.cpp  common_protocol.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  common_resolvererror.h  common_socket.h  common_sockets.cpp  common_wrap_socket.cpp  constants.h  custom_errors.h  dummy_socket.h  game_command.h  liberror.cpp  monitor_match.cpp  monitor_match.h  monitor_matches.cpp  monitor_matches.h  parser.cpp  parser.h  platform_snapshot.h  projectile_snapshot.h  protocol.cpp  protocol.h  provision_box_snapshot.h  queue.h  resolver.cpp  resolvererror.cpp  (+6 more)
common_src/socket/: CMakeLists.txt  liberror.cpp
common_src/yaml-cpp-master/src/: emitter.cpp
common_src/yaml-cpp-master/test/integration/: emitter_test.cpp  load_node_test.cpp
common_src/yaml-cpp-master/test/node/: node_test.cpp
server_src/: CMakeLists.txt  class_server.cpp  class_server.h  config.h  gameCommand.h  gamebuilder.h  map.cpp  map.h  mapReader.h  map_reader.cpp  map_reader.h  match.cpp  match.h  monitor_match.cpp  monitor_match.h  monitor_matches.cpp  monitor_matches.h  parser_server.cpp  parser_server.h  protocol_server.cpp  protocol_server.h  server.cpp  server.h  server_client.cpp  server_client.h  server_client_sender.cpp  server_client_sender.h  server_parser_server.cpp  server_parser_server.h  server_protocol_server.cpp  server_protocol_server.h  server_server.cpp  server_server.h  server_server_client.cpp  server_server_client.h  server_server_client_sender.cpp  server_server_client_sender.h  user.cpp  user.h  user_sender.cpp  (+1 more)
server_src/box2d-main/: CMakeLists.txt
server_src/game_src/: beam.cpp  beam.h  command_include.h  entity.cpp  entity.h  explosion.cpp  explosion.h  explosion_callback.cpp  explosion_callback.h  filter.cpp  filter.h  game.cpp  game.h  gameCommand.h  game_command.h  game_command_aim.cpp  game_command_aim.h  game_command_change_tool.cpp  game_command_change_tool.h  game_command_cheat_ammo.cpp  game_command_cheat_ammo.h  game_command_cheat_life.cpp  game_command_cheat_life.h  game_command_cheat_shoot.cpp  game_command_cheat_shoot.h  game_command_cheat_turn.cpp  game_command_cheat_turn.h  game_command_exit.cpp  game_command_exit.h  game_command_jump.cpp  game_command_jump.h  game_command_move.cpp  game_command_move.h  game_command_use_tool.cpp  game_command_use_tool.h  game_constants.h  gamebuilder.cpp  gamebuilder.h  listeners.cpp  listeners.h  (+61 more)
tests/: CMakeLists.txt  dummy_socket.h  my_tests.cpp
