project(Worms)
set(SDL2PP_WITH_IMAGE ON)
set(SDL2PP_WITH_MIXER ON)
set(SDL2PP_WITH_TTF ON)
add_subdirectory(libSDL2pp-0.16.2)
FILE(GLOB client_src_files "*.cpp")
include_directories(${SDL2PP_INCLUDE_DIRS})
include_directories("libSDL2pp-0.16.2/SDL2pp")
add_subdirectory(QT)
add_library(client_lib STATIC
${client_src_files})
target_compile_options(client_lib PRIVATE -fPIC)
set(CMAKE_CXX_FLAGS "-Wall -fPIC -std=c++17")
target_include_directories(client_lib PRIVATE QT)
target_link_libraries(client_lib common_lib ${SDL2PP_LIBRARIES} lobby)
#Agrego parte de SDL2PP
#include(FindPkgConfig)
#pkg_search_module(SDL2 REQUIRED sdl2)
#pkg_search_module(SDL2IMAGE REQUIRED SDL2_image>=2.0.0)
#include_directories("libSDL2pp-0.16.2/SDL2pp")
#include_directories(${SDL2PP_INCLUDE_DIRS})
#target_link_libraries(client_lib SDL2pp)
#Agrego parte de QT
#add_subdirectory(QT)
#target_compile_options(client_lib PRIVATE -fPIC)
#set(CMAKE_CXX_FLAGS "-Wall -fPIC -std=c++17")
#target_include_directories(client_lib PRIVATE QT)
#target_link_libraries(client_lib lobby)
